# serializer version: 1
# name: TestEditCall.test_call_equivalence_with_snapshot[event]
  14.0
# ---
# name: TestEditCall.test_call_equivalence_with_snapshot[interval]
  6.0
# ---
# name: TestEditCall.test_call_equivalence_with_snapshot[state]
  3.0
# ---
